--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,24 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const adults = people.some(item => item.year >= 2021 - 19)
+    console.log({adults})
     // Array.prototype.every() // is everyone 19 or older?
+    const allAdults = people.every(item => item.year >= 2021 - 19)
+    console.log(allAdults)
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const findId = comments.find(item => item.id === 823423)
+    console.log(findId)
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    const index = comments.findIndex(item => item.id === 823423)
+    const deleteItem = comments.splice(index, 1)
 
   </script>
 </body>
